--- a/taskpane.html
+++ b/taskpane.html
@@ -6,39 +6,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Test tabela</title>
   <style>
-    body { font-family: 'Segoe UI', sans-serif; padding: 20px; background: #f9fafb; margin: 0; }
-
+    body { font-family: 'Segoe UI', sans-serif; padding: 16px; background: #f9fafb; margin: 0; }
     #status {
       padding: 8px 12px; border-radius: 6px; font-size: 12px;
-      margin-bottom: 16px; background: #fef3c7; color: #92400e;
+      margin-bottom: 14px; background: #fef3c7; color: #92400e;
       border: 1px solid #fbbf24; text-align: center;
     }
     #status.ready { background: #d1fae5; color: #065f46; border-color: #6ee7b7; }
-
-    label { display: block; font-size: 12px; font-weight: 600; color: #374151; margin-bottom: 6px; }
-
+    label { display: block; font-size: 12px; font-weight: 600; color: #374151; margin-bottom: 5px; }
     select {
       width: 100%; padding: 8px 10px; border: 1px solid #d1d5db;
       border-radius: 6px; font-size: 13px; color: #1f2937;
-      background: #fff; margin-bottom: 16px; cursor: pointer;
+      background: #fff; margin-bottom: 14px; cursor: pointer;
     }
-
+    .section { 
+      border: 1px solid #e5e7eb; border-radius: 8px; 
+      padding: 12px; margin-bottom: 10px; background: #fff;
+    }
+    .section-title { 
+      font-size: 11px; font-weight: 700; color: #6b7280; 
+      text-transform: uppercase; margin-bottom: 8px; 
+    }
     button {
-      display: block; width: 100%; padding: 11px;
+      display: block; width: 100%; padding: 10px;
       background: #1d4ed8; color: #fff; border: none;
-      border-radius: 6px; font-size: 13px; font-weight: 600;
-      cursor: pointer; margin-bottom: 8px;
+      border-radius: 6px; font-size: 12px; font-weight: 600;
+      cursor: pointer; margin-bottom: 6px;
     }
     button:disabled { background: #9ca3af; cursor: not-allowed; }
+    button.secondary { background: #6b7280; }
     button.danger { background: #dc2626; }
-
     #log {
-      margin-top: 16px; padding: 10px; background: #1f2937; color: #d1fae5;
+      margin-top: 12px; padding: 10px; background: #1f2937; color: #d1fae5;
       border-radius: 6px; font-family: monospace; font-size: 11px;
-      min-height: 80px; white-space: pre-wrap; overflow-y: auto; max-height: 300px;
+      min-height: 80px; white-space: pre-wrap; overflow-y: auto; max-height: 280px;
     }
     .err  { color: #fca5a5; }
     .warn { color: #fde68a; }
+    .ok   { color: #6ee7b7; }
   </style>
 </head>
 <body>
@@ -52,14 +57,30 @@
   <option value="4">4 reda</option>
   <option value="5" selected>5 redova</option>
   <option value="6">6 redova</option>
-  <option value="7">7 redova</option>
   <option value="8">8 redova</option>
-  <option value="9">9 redova</option>
   <option value="10">10 redova</option>
 </select>
 
-<button id="btnMake" disabled>📋 Napravi tabelu</button>
-<button id="btnClear" class="danger" disabled>🗑️ Obriši dokument</button>
+<div class="section">
+  <div class="section-title">✅ Test 1 — Radi</div>
+  <button id="btnDirect" disabled>Tabela direktno u body</button>
+</div>
+
+<div class="section">
+  <div class="section-title">🧪 Test 2 — Tabela unutar CC</div>
+  <button id="btnInCC" disabled>Kreiraj CC pa ubaci tabelu</button>
+</div>
+
+<div class="section">
+  <div class="section-title">🧪 Test 3 — Nađi CC po tagu</div>
+  <button id="btnFindCC" disabled>Nađi BA_TABLE CC → popuni</button>
+</div>
+
+<div class="section">
+  <div class="section-title">🔧 Alati</div>
+  <button id="btnClear" class="danger" disabled>Obriši dokument</button>
+  <button id="btnLogClear" class="secondary">Očisti log</button>
+</div>
 
 <div id="log"></div>
 
@@ -74,48 +95,158 @@
     d.scrollTop = d.scrollHeight;
   }
 
-  document.getElementById("btnMake").onclick = async () => {
-    const n = parseInt(document.getElementById("rowCount").value, 10);
-    log(`▶ Pravim tabelu: ${n} redova, 3 kolone...`);
+  function getN() {
+    return parseInt(document.getElementById("rowCount").value, 10);
+  }
+
+  // --- Test 1: direktno u body (već radi) ---
+  document.getElementById("btnDirect").onclick = async () => {
+    const n = getN();
+    log(`▶ Test 1: tabela ${n}×3 direktno u body...`);
     try {
       await Word.run(async (ctx) => {
         const data = [];
-        for (let i = 0; i < n; i++) {
-          data.push([String(i), `Red ${i + 1}`, ""]);
-        }
-        const table = ctx.document.body.insertTable(
-          n, 3, Word.InsertLocation.end, data
-        );
-        table.styleBuiltIn = Word.Style.tableGrid;
+        for (let i = 0; i < n; i++) data.push([String(i), `Red ${i+1}`, ""]);
+        const t = ctx.document.body.insertTable(n, 3, Word.InsertLocation.end, data);
+        t.styleBuiltIn = Word.Style.tableGrid;
         await ctx.sync();
-        log(`✅ Tabela napravljena: ${n} × 3`);
+        log(`✅ OK — tabela ${n}×3 ubačena`, "ok");
       });
-    } catch (e) {
-      log("❌ " + e.message, "err");
-      log("   " + (e.stack || ""), "err");
-    }
+    } catch(e) { log("❌ " + e.message, "err"); }
   };
 
+  // --- Test 2: napravi CC, pa u cc.body ubaci tabelu ---
+  document.getElementById("btnInCC").onclick = async () => {
+    const n = getN();
+    log(`▶ Test 2: kreiram CC, pa ubacujem tabelu ${n}×3 u cc.body...`);
+    try {
+      await Word.run(async (ctx) => {
+        // Korak 1: napravi CC
+        const range = ctx.document.body.getRange(Word.RangeLocation.end);
+        const cc = range.insertContentControl();
+        cc.tag   = "BA_TABLE|type=05";
+        cc.title = "Tabela 05";
+        cc.appearance = "BoundingBox";
+        await ctx.sync();
+        log("  CC kreiran: tag=" + cc.tag);
+
+        // Korak 2: ubaci tabelu u cc.body
+        const data = [];
+        for (let i = 0; i < n; i++) data.push([String(i), `Red ${i+1}`, ""]);
+        const t = cc.body.insertTable(n, 3, Word.InsertLocation.start, data);
+        t.styleBuiltIn = Word.Style.tableGrid;
+        await ctx.sync();
+        log(`✅ OK — tabela ${n}×3 ubačena u cc.body`, "ok");
+      });
+    } catch(e) { log("❌ " + e.message, "err"); log("   " + e.stack, "err"); }
+  };
+
+  // --- Test 3: nađi postojeći CC po tagu, auto-kreiraj tabelu ako nema ---
+  document.getElementById("btnFindCC").onclick = async () => {
+    const n = getN();
+    log(`▶ Test 3: tražim CC sa BA_TABLE tagom...`);
+    try {
+      await Word.run(async (ctx) => {
+        const ccs = ctx.document.contentControls;
+        ccs.load("items/tag");
+        await ctx.sync();
+
+        log(`  Ukupno CC-a: ${ccs.items.length}`);
+        ccs.items.forEach((cc, i) => log(`  [${i}] tag="${cc.tag || '(prazno)'}"`));
+
+        const target = ccs.items.find(cc => (cc.tag||"").trim().startsWith("BA_TABLE|"));
+        if (!target) {
+          log("⚠️ Nema CC sa BA_TABLE tagom — pokreni Test 2 prvo", "warn");
+          return;
+        }
+        log(`  Nađen: "${target.tag}"`);
+
+        // Proveri da li ima tabelu
+        const tables = target.body.tables;
+        tables.load("items");
+        await ctx.sync();
+        log(`  cc.body.tables.length = ${tables.items.length}`);
+
+        let table;
+        if (tables.items.length === 0) {
+          log("  Nema tabele → kreiram automatski...", "warn");
+          target.body.clear();
+          await ctx.sync();
+          table = target.body.insertTable(1, 3, Word.InsertLocation.start, []);
+          table.styleBuiltIn = Word.Style.tableGrid;
+          await ctx.sync();
+          log("  Tabela kreirana (1×3)");
+        } else {
+          log("  Koristim postojeću tabelu");
+          table = tables.items[0];
+        }
+
+        // Dodaj/uskladi redove
+        table.load("rowCount");
+        await ctx.sync();
+        log(`  rowCount = ${table.rowCount}, cilj = ${n}`);
+
+        if (table.rowCount < n) {
+          for (let i = table.rowCount; i < n; i++) {
+            table.addRows(Word.InsertLocation.end, 1);
+          }
+          await ctx.sync();
+        }
+
+        // Upiši podatke
+        table.load("rows/items");
+        await ctx.sync();
+        for (let i = 0; i < n; i++) {
+          if (i >= table.rows.items.length) break;
+          const row = table.rows.items[i];
+          row.load("cells/items");
+          await ctx.sync();
+          const cells = row.cells.items;
+          if (cells[0]) cells[0].body.insertText(String(i), Word.InsertLocation.replace);
+          if (cells[1]) cells[1].body.insertText(`Red ${i+1}`, Word.InsertLocation.replace);
+          if (cells[2]) cells[2].body.clear();
+        }
+
+        // Obriši višak redova
+        if (table.rowCount > n) {
+          table.load("rows/items");
+          await ctx.sync();
+          for (let i = table.rowCount - 1; i >= n; i--) {
+            if (table.rows.items[i]) table.rows.items[i].delete();
+          }
+          await ctx.sync();
+        }
+
+        await ctx.sync();
+        log(`✅ OK — tabela popunjena sa ${n} redova`, "ok");
+      });
+    } catch(e) { log("❌ " + e.message, "err"); log("   " + e.stack, "err"); }
+  };
+
+  // --- Alati ---
   document.getElementById("btnClear").onclick = async () => {
-    log("▶ Brišem sadržaj...");
+    log("▶ Brišem dokument...");
     try {
       await Word.run(async (ctx) => {
         ctx.document.body.clear();
         await ctx.sync();
-        log("✅ Dokument očišćen");
+        log("✅ Dokument očišćen", "ok");
       });
-    } catch (e) {
-      log("❌ " + e.message, "err");
-    }
+    } catch(e) { log("❌ " + e.message, "err"); }
   };
 
+  document.getElementById("btnLogClear").onclick = () => {
+    document.getElementById("log").innerHTML = "";
+  };
+
+  // --- Office ready ---
   Office.onReady((info) => {
-    log(`✅ Office spreman — ${info.host} / ${info.platform}`);
+    log(`✅ Office.onReady — ${info.host} / ${info.platform}`, "ok");
     document.getElementById("status").textContent = `✅ Spreman (${info.host} / ${info.platform})`;
     document.getElementById("status").className = "ready";
-    document.getElementById("rowCount").disabled = false;
-    document.getElementById("btnMake").disabled  = false;
-    document.getElementById("btnClear").disabled = false;
+    ["rowCount","btnDirect","btnInCC","btnFindCC","btnClear"].forEach(id => {
+      document.getElementById(id).disabled = false;
+    });
   });
 </script>
 </body>
