--- a/taskpane.html
+++ b/taskpane.html
@@ -62,12 +62,12 @@
 </select>
 
 <div class="section">
-  <div class="section-title">Test 1 — Tabela direktno u body (radi)</div>
+  <div class="section-title">Test 1 — Tabela direktno u body (radi ✅)</div>
   <button id="btnDirect" disabled>Ubaci tabelu u body</button>
 </div>
 
 <div class="section">
-  <div class="section-title">Test 2 — Kreiraj CC + tabela via getRange()</div>
+  <div class="section-title">Test 2 — CC via paragraph anchor</div>
   <button id="btnInCC" disabled>Kreiraj CC → ubaci tabelu</button>
 </div>
 
@@ -110,10 +110,12 @@
   // -------------------------------------------------------
   document.getElementById("btnDirect").onclick = async () => {
     const n = getN();
-    log(`▶ Test 1: insertTable(${n}, 3) u body...`);
+    log(`▶ Test 1: insertTable(${n}, 3) direktno u body...`);
     try {
       await Word.run(async (ctx) => {
-        const t = ctx.document.body.insertTable(n, 3, Word.InsertLocation.end, makeData(n));
+        const t = ctx.document.body.insertTable(
+          n, 3, Word.InsertLocation.end, makeData(n)
+        );
         t.styleBuiltIn = Word.Style.tableGrid;
         await ctx.sync();
         log(`✅ OK`, "ok");
@@ -122,29 +124,34 @@
   };
 
   // -------------------------------------------------------
-  // TEST 2: kreiraj CC, pa ubaci tabelu via cc.getRange()
-  // cc.body NE POSTOJI — koristimo cc.getRange(whole)
+  // TEST 2: CC kreiran oko paragrafa (anchor), pa insertTable
+  // Ključ: paragraf unutar CC daje "gde" da Word zakači tabelu
   // -------------------------------------------------------
   document.getElementById("btnInCC").onclick = async () => {
     const n = getN();
-    log(`▶ Test 2: kreiram CC, pa insertTable via cc.getRange()...`);
+    log(`▶ Test 2: paragraf → CC oko njega → insertTable na end...`);
     try {
       await Word.run(async (ctx) => {
-        // Napravi CC na kraju dokumenta
-        const range = ctx.document.body.getRange(Word.RangeLocation.end);
-        const cc = range.insertContentControl();
+
+        // Korak 1: napravi paragraf na kraju dokumenta
+        const p = ctx.document.body.insertParagraph("", Word.InsertLocation.end);
+        await ctx.sync();
+        log("  Paragraf kreiran");
+
+        // Korak 2: CC oko tog paragrafa
+        const cc = p.getRange().insertContentControl();
         cc.tag        = "BA_TABLE|type=05";
         cc.title      = "Tabela 05";
         cc.appearance = "BoundingBox";
         await ctx.sync();
         log("  CC kreiran: tag=" + cc.tag);
 
-        // Ubaci tabelu KROZ cc.getRange() — ne kroz cc.body!
+        // Korak 3: insertTable na END content range-a (ne replace!)
         const ccRange = cc.getRange(Word.RangeLocation.content);
-        const t = ccRange.insertTable(n, 3, Word.InsertLocation.replace, makeData(n));
+        const t = ccRange.insertTable(n, 3, Word.InsertLocation.end, makeData(n));
         t.styleBuiltIn = Word.Style.tableGrid;
         await ctx.sync();
-        log(`✅ OK — tabela ${n}×3 ubačena via cc.getRange()`, "ok");
+        log(`✅ OK — tabela ${n}×3 ubačena u CC`, "ok");
       });
     } catch (e) {
       log("❌ " + e.message, "err");
@@ -153,8 +160,7 @@
   };
 
   // -------------------------------------------------------
-  // TEST 3: nađi postojeći CC po tagu, nađi tabelu ili
-  //         kreiraj novu via getRange(), pa popuni redove
+  // TEST 3: nađi postojeći CC po tagu, proveri/kreiraj tabelu
   // -------------------------------------------------------
   document.getElementById("btnFindCC").onclick = async () => {
     const n = getN();
@@ -168,7 +174,9 @@
         log(`  Ukupno CC-a: ${ccs.items.length}`);
         ccs.items.forEach((cc, i) => log(`  [${i}] tag="${cc.tag || "(prazno)"}"`));
 
-        const target = ccs.items.find(cc => (cc.tag || "").trim().startsWith("BA_TABLE|"));
+        const target = ccs.items.find(
+          cc => (cc.tag || "").trim().startsWith("BA_TABLE|")
+        );
         if (!target) {
           log("⚠️ Nema CC sa BA_TABLE tagom — pokreni Test 2 prvo", "warn");
           return;
@@ -180,21 +188,23 @@
         const tables  = ccRange.tables;
         tables.load("items");
         await ctx.sync();
-        log(`  tables u CC rangu: ${tables.items.length}`);
+        log(`  Tabela count u CC: ${tables.items.length}`);
 
         let table;
         if (tables.items.length === 0) {
-          // Nema tabele — kreiraj via replace na content range
-          log("  Nema tabele → kreiram via getRange().insertTable()", "warn");
-          const t = ccRange.insertTable(1, 3, Word.InsertLocation.replace, []);
+          log("  Nema tabele → kreiram via insertTable(end)...", "warn");
+          // anchor paragraf + insertTable na end (ne replace na praznom range)
+          target.insertParagraph("", Word.InsertLocation.end);
+          await ctx.sync();
+          const r2 = target.getRange(Word.RangeLocation.content);
+          const t  = r2.insertTable(1, 3, Word.InsertLocation.end, []);
           t.styleBuiltIn = Word.Style.tableGrid;
           await ctx.sync();
-
-          // Reload da dobijem referencu
-          const tables2 = target.getRange(Word.RangeLocation.content).tables;
-          tables2.load("items");
+          // reload reference
+          const t2 = target.getRange(Word.RangeLocation.content).tables;
+          t2.load("items");
           await ctx.sync();
-          table = tables2.items[0];
+          table = t2.items[0];
           log("  Tabela kreirana (1×3)");
         } else {
           table = tables.items[0];
@@ -213,17 +223,16 @@
           await ctx.sync();
         }
 
-        // Upiši podatke red po red
+        // Upiši podatke
         table.load("rows/items");
         await ctx.sync();
-
         for (let i = 0; i < n && i < table.rows.items.length; i++) {
           const row = table.rows.items[i];
           row.load("cells/items");
           await ctx.sync();
           const cells = row.cells.items;
-          if (cells[0]) cells[0].body.insertText(String(i),       Word.InsertLocation.replace);
-          if (cells[1]) cells[1].body.insertText(`Red ${i + 1}`,  Word.InsertLocation.replace);
+          if (cells[0]) cells[0].body.insertText(String(i),      Word.InsertLocation.replace);
+          if (cells[1]) cells[1].body.insertText(`Red ${i + 1}`, Word.InsertLocation.replace);
           if (cells[2]) cells[2].body.clear();
         }
 
