--- a/taskpane.html
+++ b/taskpane.html
@@ -4,44 +4,22 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Test tabela - Bookmark → CC</title>
+  <title>Test tabela - Bookmark In-Place</title>
   <style>
     body { font-family: 'Segoe UI', sans-serif; padding: 16px; background: #f9fafb; margin: 0; }
-    #status {
-      padding: 8px 12px; border-radius: 6px; font-size: 12px;
-      margin-bottom: 14px; background: #fef3c7; color: #92400e;
-      border: 1px solid #fbbf24; text-align: center;
-    }
+    #status { padding: 8px 12px; border-radius: 6px; font-size: 12px; margin-bottom: 14px; background: #fef3c7; color: #92400e; border: 1px solid #fbbf24; text-align: center; }
     #status.ready { background: #d1fae5; color: #065f46; border-color: #6ee7b7; }
     label { display: block; font-size: 12px; font-weight: 600; color: #374151; margin-bottom: 5px; }
-    select {
-      width: 100%; padding: 8px 10px; border: 1px solid #d1d5db;
-      border-radius: 6px; font-size: 13px; color: #1f2937;
-      background: #fff; margin-bottom: 14px; cursor: pointer;
-    }
-    .section {
-      border: 1px solid #e5e7eb; border-radius: 8px;
-      padding: 12px; margin-bottom: 10px; background: #fff;
-    }
+    select { width: 100%; padding: 8px 10px; border: 1px solid #d1d5db; border-radius: 6px; font-size: 13px; color: #1f2937; background: #fff; margin-bottom: 14px; cursor: pointer; }
+    .section { border: 1px solid #e5e7eb; border-radius: 8px; padding: 12px; margin-bottom: 10px; background: #fff; }
     .section-title { font-size: 11px; font-weight: 700; color: #6b7280; text-transform: uppercase; margin-bottom: 6px; }
     .hint { font-size: 11px; color: #6b7280; margin-bottom: 8px; line-height: 1.5; }
-    button {
-      display: block; width: 100%; padding: 10px;
-      background: #1d4ed8; color: #fff; border: none;
-      border-radius: 6px; font-size: 12px; font-weight: 600;
-      cursor: pointer; margin-bottom: 6px;
-    }
+    button { display: block; width: 100%; padding: 10px; background: #1d4ed8; color: #fff; border: none; border-radius: 6px; font-size: 12px; font-weight: 600; cursor: pointer; margin-bottom: 6px; }
     button:disabled { background: #9ca3af; cursor: not-allowed; }
     button.secondary { background: #6b7280; }
     button.danger { background: #dc2626; }
-    #log {
-      margin-top: 12px; padding: 10px; background: #1f2937; color: #d1fae5;
-      border-radius: 6px; font-family: monospace; font-size: 11px;
-      min-height: 80px; white-space: pre-wrap; overflow-y: auto; max-height: 320px;
-    }
-    .err  { color: #fca5a5; }
-    .warn { color: #fde68a; }
-    .ok   { color: #6ee7b7; }
+    #log { margin-top: 12px; padding: 10px; background: #1f2937; color: #d1fae5; border-radius: 6px; font-family: monospace; font-size: 11px; min-height: 80px; white-space: pre-wrap; overflow-y: auto; max-height: 320px; }
+    .err { color: #fca5a5; } .warn { color: #fde68a; } .ok { color: #6ee7b7; }
   </style>
 </head>
 <body>
@@ -50,38 +28,24 @@
 
 <label for="rowCount">Broj redova:</label>
 <select id="rowCount" disabled>
-  <option value="2">2 reda</option>
-  <option value="3">3 reda</option>
-  <option value="4">4 reda</option>
-  <option value="5" selected>5 redova</option>
-  <option value="6">6 redova</option>
-  <option value="8">8 redova</option>
-  <option value="10">10 redova</option>
+  <option value="2">2</option><option value="3">3</option><option value="4">4</option>
+  <option value="5" selected>5</option><option value="6">6</option>
+  <option value="8">8</option><option value="10">10</option>
 </select>
 
 <div class="section">
-  <div class="section-title">Korak 1 — Postavi bookmark placeholder</div>
-  <div class="hint">
-    Ubacuje prazan paragraf sa bookmarkom <b>BA_TMP_TABLE_05</b>.<br>
-    U produkciji korisnik ovo postavi ručno u template.
-  </div>
-  <button id="btnStep1" disabled>Ubaci bookmark placeholder</button>
+  <div class="section-title">Korak 1 — Postavi bookmark na kursor</div>
+  <div class="hint">Klikni u dokument gde hoćeš tabelu, pa klikni ovo dugme.</div>
+  <button id="btnStep1" disabled>Postavi bookmark na kursor</button>
 </div>
 
 <div class="section">
-  <div class="section-title">Korak 2 — Generiši tabelu</div>
+  <div class="section-title">Korak 2 — Generiši / Ažuriraj tabelu</div>
   <div class="hint">
-    Nađe bookmark → <b>insertTable(replace)</b> → obavije CC-om → obriše bookmark.
+    Nađe bookmark → <b>insertTable(replace)</b> → ponovo postavi bookmark oko tabele.<br>
+    Isto dugme radi i za generisanje i za ažuriranje.
   </div>
-  <button id="btnStep2" disabled>Bookmark → tabela → CC</button>
-</div>
-
-<div class="section">
-  <div class="section-title">Korak 3 — Regeneriši (nađi CC → ažuriraj)</div>
-  <div class="hint">
-    Nađe postojeći CC po tagu <b>BA_TABLE|type=05</b> → ažurira broj redova.
-  </div>
-  <button id="btnStep3" disabled>Nađi CC → ažuriraj tabelu</button>
+  <button id="btnStep2" disabled>Generiši / Ažuriraj tabelu</button>
 </div>
 
 <div class="section">
@@ -94,6 +58,8 @@
 
 <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
 <script>
+  const BM_NAME = "BA_TMP_TABLE_05";
+
   function log(msg, type) {
     const d = document.getElementById("log");
     const line = document.createElement("div");
@@ -111,145 +77,55 @@
     return rows;
   }
 
-  // -------------------------------------------------------
-  // KORAK 1: Ubaci bookmark placeholder
-  // (simulira ono što korisnik ručno postavi u template)
-  // -------------------------------------------------------
+  // Korak 1: postavi bookmark na trenutnu poziciju kursora
   document.getElementById("btnStep1").onclick = async () => {
-    log("▶ Korak 1: ubacujem bookmark placeholder...");
+    log("▶ Korak 1: postavljam bookmark na kursor...");
     try {
       await Word.run(async (ctx) => {
-        // Prazan paragraf + bookmark = stabilna insertion tačka
-        const p = ctx.document.body.insertParagraph("", Word.InsertLocation.end);
+        const range = ctx.document.getSelection();
+        range.insertBookmark(BM_NAME);
         await ctx.sync();
-        p.getRange().insertBookmark("BA_TMP_TABLE_05");
-        await ctx.sync();
-        log("✅ Bookmark BA_TMP_TABLE_05 postavljen", "ok");
+        log(`✅ Bookmark "${BM_NAME}" postavljen na kursoru`, "ok");
       });
     } catch (e) { log("❌ " + e.message, "err"); }
   };
 
-  // -------------------------------------------------------
-  // KORAK 2: Bookmark → insertTable(replace) → CC → delete bookmark
-  // -------------------------------------------------------
-  document.getElementById("btnStep2").onclick = async () => {
+  // Korak 2 + 3: isti flow — bookmark → tabela → novi bookmark oko tabele
+  async function generateOrUpdateTable() {
     const n = getN();
-    log(`▶ Korak 2: bookmark → tabela ${n}×3 → CC...`);
+    log(`▶ Generišem/ažuriram tabelu: ${n} redova...`);
     try {
       await Word.run(async (ctx) => {
 
-        // 1) Nađi bookmark range
-        const bm = ctx.document.getBookmarkRange("BA_TMP_TABLE_05");
+        // 1. Nađi bookmark (OrNullObject ne baca grešku ako ne postoji)
+        const bm = ctx.document.getBookmarkRangeOrNullObject(BM_NAME);
+        bm.load("isNullObject");
         await ctx.sync();
+
+        if (bm.isNullObject) {
+          log("⚠️ Bookmark nije pronađen — klikni Korak 1 prvo", "warn");
+          return;
+        }
         log("  Bookmark nađen");
 
-        // 2) Ubaci tabelu na mestu bookmarksa
+        // 2. Ubaci tabelu — replace briše stari sadržaj i bookmark
         const table = bm.insertTable(n, 3, Word.InsertLocation.replace, makeData(n));
         table.styleBuiltIn = Word.Style.tableGrid;
-        await ctx.sync();
-        log(`  Tabela ${n}×3 ubačena`);
 
-        // 3) Obavi tabelu CC-om sa BA_TABLE tagom
-        const tableRange = table.getRange();
-        const cc = tableRange.insertContentControl();
-        cc.tag        = "BA_TABLE|type=05";
-        cc.title      = "Tabela 05";
-        cc.appearance = "BoundingBox";
-        await ctx.sync();
-        log("  CC omotan oko tabele: tag=" + cc.tag);
+        // 3. Odmah ponovo postavi bookmark oko cele tabele
+        table.getRange().insertBookmark(BM_NAME);
 
-        // 4) Obriši privremeni bookmark
-        ctx.document.deleteBookmark("BA_TMP_TABLE_05");
         await ctx.sync();
-        log("✅ Korak 2 OK — tabela generisana i obmotan CC", "ok");
+        log(`✅ Tabela ${n}×3 generisana, bookmark "${BM_NAME}" ponovo fiksiran`, "ok");
       });
     } catch (e) {
       log("❌ " + e.message, "err");
       log("   " + (e.stack || ""), "err");
     }
-  };
+  }
 
-  // -------------------------------------------------------
-  // KORAK 3: Nađi CC po tagu → ažuriraj tabelu
-  // (regeneracija bez bookmarksa)
-  // -------------------------------------------------------
-  document.getElementById("btnStep3").onclick = async () => {
-    const n = getN();
-    log(`▶ Korak 3: tražim CC BA_TABLE|type=05 → ažuriram na ${n} redova...`);
-    try {
-      await Word.run(async (ctx) => {
-        const ccs = ctx.document.contentControls;
-        ccs.load("items/tag");
-        await ctx.sync();
+  document.getElementById("btnStep2").onclick = generateOrUpdateTable;
 
-        const target = ccs.items.find(cc => (cc.tag || "").trim() === "BA_TABLE|type=05");
-        if (!target) {
-          log("⚠️ CC sa tagom BA_TABLE|type=05 nije nađen", "warn");
-          return;
-        }
-        log(`  CC nađen: "${target.tag}"`);
-
-        // Nađi tabelu unutar CC range-a
-        const ccRange = target.getRange(Word.RangeLocation.content);
-        const tables  = ccRange.tables;
-        tables.load("items");
-        await ctx.sync();
-        log(`  Tabela count: ${tables.items.length}`);
-
-        if (tables.items.length === 0) {
-          log("⚠️ Nema tabele u CC — pokreni Korak 2 prvo", "warn");
-          return;
-        }
-
-        const table = tables.items[0];
-        table.load("rowCount");
-        await ctx.sync();
-        log(`  Trenutno redova: ${table.rowCount}, cilj: ${n}`);
-
-        // Dodaj redove ako treba
-        if (table.rowCount < n) {
-          for (let i = table.rowCount; i < n; i++) {
-            table.addRows(Word.InsertLocation.end, 1);
-          }
-          await ctx.sync();
-        }
-
-        // Reload i upiši podatke
-        table.load("rows/items");
-        await ctx.sync();
-
-        for (let i = 0; i < n && i < table.rows.items.length; i++) {
-          const row = table.rows.items[i];
-          row.load("cells/items");
-          await ctx.sync();
-          const cells = row.cells.items;
-          if (cells[0]) cells[0].body.insertText(String(i),      Word.InsertLocation.replace);
-          if (cells[1]) cells[1].body.insertText(`Red ${i + 1}`, Word.InsertLocation.replace);
-          if (cells[2]) cells[2].body.clear();
-        }
-
-        // Obriši višak redova
-        if (table.rowCount > n) {
-          table.load("rows/items");
-          await ctx.sync();
-          for (let i = table.rowCount - 1; i >= n; i--) {
-            if (table.rows.items[i]) table.rows.items[i].delete();
-          }
-          await ctx.sync();
-        }
-
-        await ctx.sync();
-        log(`✅ Korak 3 OK — tabela ažurirana: ${n} redova`, "ok");
-      });
-    } catch (e) {
-      log("❌ " + e.message, "err");
-      log("   " + (e.stack || ""), "err");
-    }
-  };
-
-  // -------------------------------------------------------
-  // Alati
-  // -------------------------------------------------------
   document.getElementById("btnClear").onclick = async () => {
     try {
       await Word.run(async (ctx) => {
@@ -264,14 +140,11 @@
     document.getElementById("log").innerHTML = "";
   };
 
-  // -------------------------------------------------------
-  // Office ready
-  // -------------------------------------------------------
   Office.onReady((info) => {
     log(`✅ Office.onReady — ${info.host} / ${info.platform}`, "ok");
     document.getElementById("status").textContent = `✅ Spreman (${info.host} / ${info.platform})`;
     document.getElementById("status").className = "ready";
-    ["rowCount","btnStep1","btnStep2","btnStep3","btnClear"].forEach(id => {
+    ["rowCount","btnStep1","btnStep2","btnClear"].forEach(id => {
       document.getElementById(id).disabled = false;
     });
   });
