--- a/taskpane.html
+++ b/taskpane.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Test tabela - Bookmark In-Place</title>
+  <title>Test tabela - Bookmark v5</title>
   <style>
     body { font-family: 'Segoe UI', sans-serif; padding: 16px; background: #f9fafb; margin: 0; }
     #status { padding: 8px 12px; border-radius: 6px; font-size: 12px; margin-bottom: 14px; background: #fef3c7; color: #92400e; border: 1px solid #fbbf24; text-align: center; }
@@ -34,17 +34,17 @@
 </select>
 
 <div class="section">
-  <div class="section-title">Korak 1 — Postavi bookmark na kursor</div>
-  <div class="hint">Klikni u dokument gde hoćeš tabelu, pa klikni ovo dugme.</div>
-  <button id="btnStep1" disabled>Postavi bookmark na kursor</button>
+  <div class="section-title">Korak 1 — Postavi bookmark placeholder</div>
+  <div class="hint">
+    Ubacuje vidljivi marker <b>«tabela»</b> i bookmark oko njega.<br>
+    Bookmark mora imati sadržaj — prazan bookmark ne prima <code>replace</code>.
+  </div>
+  <button id="btnStep1" disabled>Ubaci bookmark sa sadržajem</button>
 </div>
 
 <div class="section">
-  <div class="section-title">Korak 2 — Generiši / Ažuriraj tabelu</div>
-  <div class="hint">
-    Nađe bookmark → <b>insertTable(replace)</b> → ponovo postavi bookmark oko tabele.<br>
-    Isto dugme radi i za generisanje i za ažuriranje.
-  </div>
+  <div class="section-title">Korak 2 — Generiši / Ažuriraj</div>
+  <div class="hint">Nađe bookmark → replace sa tabelom → ponovo postavi bookmark oko tabele.</div>
   <button id="btnStep2" disabled>Generiši / Ažuriraj tabelu</button>
 </div>
 
@@ -71,52 +71,62 @@
 
   function getN() { return parseInt(document.getElementById("rowCount").value, 10); }
 
+  // Svi elementi MORAJU biti String — Word API je striktan
   function makeData(n) {
     const rows = [];
-    for (let i = 0; i < n; i++) rows.push([String(i), `Red ${i + 1}`, ""]);
+    for (let i = 0; i < n; i++) {
+      rows.push([String(i), String(`Red ${i + 1}`), String("")]);
+    }
     return rows;
   }
 
-  // Korak 1: postavi bookmark na trenutnu poziciju kursora
+  // Korak 1: ubaci marker tekst + bookmark oko njega
+  // Bookmark mora imati ne-prazan sadržaj da bi replace radio
   document.getElementById("btnStep1").onclick = async () => {
-    log("▶ Korak 1: postavljam bookmark na kursor...");
+    log("▶ Korak 1: ubacujem marker + bookmark...");
     try {
       await Word.run(async (ctx) => {
-        const range = ctx.document.getSelection();
-        range.insertBookmark(BM_NAME);
+        // Ubaci marker paragraf na kraj dokumenta
+        const p = ctx.document.body.insertParagraph("«tabela»", Word.InsertLocation.end);
         await ctx.sync();
-        log(`✅ Bookmark "${BM_NAME}" postavljen na kursoru`, "ok");
+
+        // Bookmark oko celog teksta paragrafa — ima sadržaj, nije prazan
+        p.getRange().insertBookmark(BM_NAME);
+        await ctx.sync();
+        log(`✅ Bookmark "${BM_NAME}" postavljen oko teksta "«tabela»"`, "ok");
+        log(`   (bookmark ima sadržaj → replace će raditi)`, "warn");
       });
     } catch (e) { log("❌ " + e.message, "err"); }
   };
 
-  // Korak 2 + 3: isti flow — bookmark → tabela → novi bookmark oko tabele
+  // Korak 2 = Korak 3: bookmark → tabela(replace) → novi bookmark oko tabele
   async function generateOrUpdateTable() {
     const n = getN();
-    log(`▶ Generišem/ažuriram tabelu: ${n} redova...`);
+    const data = makeData(n);
+    log(`▶ Generišem tabelu: ${n} redova, 3 kolone...`);
+    log(`   Primer podataka[0]: [${data[0].map(v => `"${v}"`).join(", ")}]`);
+
     try {
       await Word.run(async (ctx) => {
-
-        // 1. Nađi bookmark (OrNullObject ne baca grešku ako ne postoji)
         const bm = ctx.document.getBookmarkRangeOrNullObject(BM_NAME);
-        bm.load("isNullObject");
+        bm.load("isNullObject, text");
         await ctx.sync();
 
         if (bm.isNullObject) {
-          log("⚠️ Bookmark nije pronađen — klikni Korak 1 prvo", "warn");
+          log("⚠️ Bookmark nije nađen — klikni Korak 1 prvo", "warn");
           return;
         }
-        log("  Bookmark nađen");
+        log(`  Bookmark nađen, sadržaj: "${bm.text}"`);
 
-        // 2. Ubaci tabelu — replace briše stari sadržaj i bookmark
-        const table = bm.insertTable(n, 3, Word.InsertLocation.replace, makeData(n));
+        // Replace — radi samo ako bookmark ima sadržaj (ne prazan)
+        const table = bm.insertTable(n, 3, Word.InsertLocation.replace, data);
         table.styleBuiltIn = Word.Style.tableGrid;
 
-        // 3. Odmah ponovo postavi bookmark oko cele tabele
+        // Odmah ponovo postavi bookmark oko cele tabele
         table.getRange().insertBookmark(BM_NAME);
 
         await ctx.sync();
-        log(`✅ Tabela ${n}×3 generisana, bookmark "${BM_NAME}" ponovo fiksiran`, "ok");
+        log(`✅ Tabela ${n}×3 generisana, bookmark ponovo postavljen`, "ok");
       });
     } catch (e) {
       log("❌ " + e.message, "err");
